# Phrost

./: .gitignore  README.md
.github/workflows/: windows-arm-build.yml  windows-arm-node-build.yml  windows-x64-build.yml  windows-x64-node-build.yml
Docs/: BinaryPackFormat.md  Building.md
Docs/Plugins/: Zig.md
Docs/javascript/: 01_Getting-Started.md  02_Window.md  03_Camera.md  04_Input-Handling.md
Docs/php/: 01_Getting-Started.md  02_Window.md  03_Camera.md  04_Input-Handling.md  05_Sprites.md  06_Fonts.md  07_Geometry.md  08_Audio.md  09_Physics.md  10_Tiled.md  11_Live-Reload.md
Engine/Data/: AdapterHelpers.php  LanguageAdapter.php  generate.php  structs.json
Engine/Data/adapters/: CAdapter.php  PhpAdapter.php  PythonAdapter.php  RustAdapter.php  SwiftAdapter.php  ZigAdapter.php
Engine/PhrostEngineV2/: .gitignore  Package.resolved  Package.swift  README.md  imgui.ini
Engine/PhrostEngineV2/Scripts/: build_macos.sh  build_xcframework.sh  macos_ext.sh  macos_package_unsigned.sh  macos_sign.sh  run_ubuntu.sh  win_ext_arm64.ps1  win_ext_x64.ps1  win_node_arm64.ps1  win_node_x64.ps1
Engine/PhrostEngineV2/Sources/CSwiftPHP/: c_helpers.c  c_helpers.h
Engine/PhrostEngineV2/Sources/PHPCore/: PHPBuild.swift  PHPCore.swift  PHPZendTypes.swift
Engine/PhrostEngineV2/Sources/PhrostBinary/: logger.swift  main.swift
Engine/PhrostEngineV2/Sources/PhrostEngineCore/: Engine+Audio.swift  Engine+Commands.swift  Engine+Loop.swift  Engine+Physics.swift  Engine+Platform.swift  Engine+Plugin.swift  Engine+Text.swift  Engine+Texture.swift  Engine+UI.swift  Engine.swift  Events.swift  GeometryManager.swift  Phrost.swift  PhysicsManager.swift  Polygon.swift  Structs.swift
Engine/PhrostEngineV2/Sources/PhrostEngineLib/: shared.swift
Engine/PhrostEngineV2/Sources/PhrostIPC/: main.swift
Engine/PhrostEngineV2/Sources/SwiftPHPExtension/: PHPModule.swift  SDL3.swift
Engine/SwiftChipmunk2D/: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Mintfile  Package.swift  README.md  buildPackageWin.ps1
Engine/SwiftChipmunk2D/.github/: pull_request_template.md
Engine/SwiftChipmunk2D/.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
Engine/SwiftChipmunk2D/.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  markdown-link-check.yml
Engine/SwiftChipmunk2D/Chipmunk2D.xcframework/: Info.plist
Engine/SwiftChipmunk2D/Chipmunk2D.xcframework/ios-arm64/Headers/: chipmunk.h  cpMarch.h  cpPolyline.h
Engine/SwiftChipmunk2D/Chipmunk2D.xcframework/macos-arm64_x86_64/Headers/: module.modulemap
Engine/SwiftChipmunk2D/Scripts/: build_xcframework.sh
Engine/SwiftChipmunk2D/Sources/CChipmunk2D/: chipmunk_wrapper.c  chipmunk_wrapper.h  linux.h  module.modulemap  shims.h  windows.h
Engine/SwiftChipmunk2D/Sources/Chipmunk2D/: Chipmunk2D.swift
Engine/SwiftSDL/: Package.swift  win_ext.ps1
Engine/SwiftSDL/Sources/SwiftSDL/: Texture.swift
Engine/SwiftSDL_image/: Package.swift  win_ext.ps1
Engine/SwiftSDL_image/Dependencies/CSDL3_image/: sdl3_image.h
Engine/SwiftSDL_image/Samples/SwiftSDL-TestBench/Sources/: SDL.swift
Engine/SwiftSDL_mixer/: Package.swift  macos_ext.sh
Engine/SwiftSDL_mixer/Dependencies/CSDL3_mixer/: module.modulemap  sdl3_mixer.h
Engine/SwiftSDL_mixer/Dependencies/CSDL_mixer/include/: sdl_mixer.h
Engine/SwiftSDL_mixer/Sources/SwiftSDL_mixer/: _Exported.swift
Engine/SwiftSDL_ttf/: Package.swift  win_ext.ps1
Engine/SwiftSDL_ttf/Dependencies/CSDL3_ttf/: sdl3_ttf.h
Engine/miniaudio-swift/Sources/CMiniaudio/include/: miniaudio.h
Runtime/assets/: The Sidescroller's Dungeon Tiles 32x32.tsx  map.tmx
Runtime/c/embed/: CMakeLists.txt  CMakeSettings.json  Deploy.cmake  Makefile  README.md  main.c  php_thread.c  php_thread.h  phrost.h  pthread_shim.h
Runtime/c/plugin/: event_packer.c  event_packer.h  events.h
Runtime/javascript/: GameLogic.js  main.js  settings.json
Runtime/javascript/Phrost/: Audio.js  Camera.js  ChannelPacker.js  CommandPacker.js  Events.js  GeomType.js  Geometry.js  IPClient.js  Id.js  Keycode.js  LiveReload.js  Mod.js  PackFormat.js  PhysicsBody.js  Scancode.js  Sprite.js  SpriteAnimated.js  Text.js  Tiled.js  Window.js  WindowFlags.js
Runtime/javascript/examples/: bunny-benchmark.js
Runtime/javascript/src/: Warrior.js  WarriorBody.js
Runtime/lua/: settings.json
Runtime/lua/phrost/: client.lua  enums.lua  formats.lua  id.lua  packer.lua
Runtime/php/: bundle.php  composer.json  game-logic.php  main.php  settings.json
Runtime/php/examples/: game-logic.php  game.php  geometery.php  gorillas.php  main.php  physics.php  snake.php  sprite-animation.php  test.php
Runtime/php/libs/Phrost/: Audio.php  Camera.php  ChannelPacker.php  CommandPacker.php  Events.php  GeomType.php  Geometry.php  IPCClient.php  Id.php  Keycode.php  LiveReload.php  Mod.php  PackFormat.php  PhysicsBody.php  Scancode.php  Sprite.php  SpriteAnimated.php  Text.php  Tiled.php  UI.php  UIInteraction.php  Window.php  WindowFlags.php
Runtime/php/src/: Warrior.php  WarriorBody.php
Runtime/python/: client.py  game_logic.py
Runtime/python/Phrost/: Audio.py  ChannelPacker.py  Channels.py  CommandPacker.py  Events.py  GeomType.py  Geometry.py  Id.py  Keycode.py  Live-Reload.py  PackFormat.py  PackFormats.py  PhysicsBody.py  Scancode.py  Sprite.py  SpriteAnimated.py  Text.py  Window.py  WindowFlags.py  ipc_client.py
Runtime/rust/plugin/: Cargo.toml
Runtime/rust/plugin/src/: events.rs  lib.rs
Runtime/zig/plugin/: build.zig  build.zig.zon
Runtime/zig/plugin/src/: game_logic.zig  main.zig  phrost.zig  process_events.zig  sprite.zig
Website/: Dockerfile  Package.resolved  Package.swift  docker-compose.yml
Website/Resources/Views/: forgot-password.html  index.html  index.leaf  login.html  publish.html
Website/Resources/Views/user/: dashboard.html
Website/Sources/api/: configure.swift  routes.swift
Website/Sources/api/Migrations/: InitMigration.swift
Website/Sources/api/Models/: Game.swift  GameBuild.swift  User.swift
Website/Tests/apiTests/: apiTests.swift
(+1 files in other folders)
